--- a/.github/workflows/test-lighthouse.yml
+++ b/.github/workflows/test-lighthouse.yml
@@ -1,4 +1,4 @@
-name: ⛵️ Lighthouse - Tests
+name: ⛵️ Lighthouse
 run-name: "${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - Lighthouse Run for ${{ github.event_name == 'pull_request' && format('PR #{0}: {1}', github.event.pull_request.number, github.event.pull_request.title) || format('latest {0}', github.ref_name) }}"
 
 on:
@@ -13,14 +13,6 @@ on:
         required: true
       AWS_REGION:
         required: true
-  # pull_request:
-  #   paths:
-  #     - "front/**"
-  #   branches: [main, develop]
-
-permissions:
-  checks: write
-  contents: write
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
@@ -55,41 +47,51 @@ jobs:
 
       - name: ↧ Install & Patch
         run: |
-          cd _ci/perf && npm ci --legacy-peer-deps
+          cd _ci/perf && npm ci
 
-      - name: 🌤️ Warmup Cache
+      - name: 🌤️ Warmup CloudFront Cache
         run: |
           _ci/_utils/warmup.sh
 
       - name: 🔦 Run Lighthouse
         id: lighthouse
-        uses: treosh/lighthouse-ci-action@v10
-        with:
-          urls: |
-            https://${{ vars.WWW_DOMAIN }}/
-            https://${{ vars.WWW_DOMAIN }}/posts
-            https://${{ vars.WWW_DOMAIN }}/post/the-little-end-to-end-testing-engineer-who-could-a-tale-of-heroism-and-headaches/
-            https://${{ vars.WWW_DOMAIN }}/posts/category/development/
-            https://${{ vars.WWW_DOMAIN }}/privacy
-          configPath: "_ci/perf/.lighthouserc.json"
+        run: |
+          cd _ci/perf/lighthouse
+          urls="${{ vars.LIGHTHOUSE_URLS }}"
+          while IFS="" read -r url || [ -n "$url" ]; do
+            u="$(echo "$url" | tr -d '\r')"
+            undurl=$(echo "$u" | sed -E 's|https?://([^/]+)(/[^?#]*)?([?#]?.*)?|\2|;s|/+$||;s|/|_|g')
+            echo "Running Lighthouse on $u and writing report to ./$undurl"
+            npm run lhgh $u -- --output-path ./mobile_"$undurl"report.html
+            npm run lhgh-d $u -- --output-path ./desktop_"$undurl"report.html
+          done <<<"$urls"
 
       - name: ⚓️ Drop Anchor
         if: always()
         run: |
-          sudo _ci/perf/_utils/landfall.sh ${{ steps.lighthouse.outputs.resultsPath }}
+          ls -la _ci/perf/lighthouse
+          sudo _ci/perf/_utils/landfall.sh _ci/perf/lighthouse
           echo "# Lighthouse Results" >> $GITHUB_STEP_SUMMARY
           echo "<a href=\"http://${{ vars.REPORTS_DOMAIN }}/lighthouse\" target=\"_blank\">Lighthouse Reports</a>" >> $GITHUB_STEP_SUMMARY
-          echo "${{ steps.lighthouse.outputs.manifest }}" >> $GITHUB_STEP_SUMMARY
 
-      # - name: ⬆ Upload Reports
-      #   if: always()
-      #   uses: jakejarvis/s3-sync-action@master
-      #   with:
-      #     args: --acl public-read --follow-symlinks --delete --cache-control max-age=2853200,public
-      #   env:
-      #     AWS_S3_BUCKET: ${{ vars.REPORTS_DOMAIN }}
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     AWS_REGION: ${{ secrets.AWS_REGION }}
-      #     SOURCE_DIR: ${{ steps.lighthouse.outputs.resultsPath }}
-      #     DEST_DIR: "lighthouse"
+      - name: ⬆ Upload Reports
+        if: always()
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete --exclude '*.cjs' --cache-control max-age=2853200,public
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: "_ci/perf/lighthouse"
+          DEST_DIR: "lighthouse"
+
+      - name: ∅ Invalidate CloudFront
+        uses: chetan/invalidate-cloudfront-action@v2
+        env:
+          DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
+          PATHS: "/*"
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
