--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpagetest": "webpagetest test process.env.URL",
-    "lighthouse": "lighthouse \"$URL\" --view --chrome-flags='--headless'",
-    "axe": "node axe/reporter.js"
+    "axe": "node axe/reporter.js",
+    "lh": "PSI_APIKEY=$PSI_APIKEY lighthouse --config-path=./lighthouse/.lighthouserc.mobile.cjs \"$URL\" --view --chrome-flags='--headless'",
+    "lh-d": "PSI_APIKEY=$PSI_APIKEY lighthouse --config-path=./lighthouse/.lighthouserc.desktop.cjs \"$URL\" --view --chrome-flags='--headless'",
+    "lhgh": "cd lighthouse && lighthouse --config-path=./.lighthouserc.mobile.cjs --chrome-flags='--headless'",
+    "lhgh-d": "cd lighthouse && lighthouse --config-path=./.lighthouserc.desktop.cjs --chrome-flags='--headless'",
+    "psi": "psi",
+    "psim": "psi http://stg.dgrebb.com --key=$(pass dg/keys/page-speed-insights) --prettyprint=true --strategy=mobile",
+    "psid": "psi http://stg.dgrebb.com --key=$(pass dg/keys/page-speed-insights) --prettyprint=true --strategy=desktop"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +20,6 @@
     "axe-core": "^4.7.2",
     "axe-html-reporter": "^2.2.3",
     "lighthouse": "^11.0.0",
-    "lighthouse-plugin-field-performance": "github:dgrebb/lighthouse-plugin-field-performance#develop",
-    "lighthouse-plugin-social-sharing": "^0.0.1"
+    "psi": "^4.1.0"
   }
 }
