--- a/.github/workflows/test-lighthouse.yml
+++ b/.github/workflows/test-lighthouse.yml
@@ -44,7 +44,10 @@ jobs:
             _ci
 
       - name: 🌤️ Warmup Cache
-        run: _ci/_utils/warmup.sh
+        run: |
+          _ci/_utils/warmup.sh
+          echo "# Lighthouse Report" >> $GITHUB_STEP_SUMMARY
+          echo "<a href=\"http://${{ vars.REPORTS_DOMAIN }}/lighthouse\" target=\"_blank\">Lighthouse Reports</a>" >> $GITHUB_STEP_SUMMARY
 
       - name: 🔦
         id: lighthouse
