--- a/.github/workflows/test-lighthouse.yml
+++ b/.github/workflows/test-lighthouse.yml
@@ -48,13 +48,13 @@ jobs:
           _ci/_utils/warmup.sh
           echo "# Lighthouse Reports" >> $GITHUB_STEP_SUMMARY
           echo "<a href=\"http://${{ vars.REPORTS_DOMAIN }}/lighthouse\" target=\"_blank\">Lighthouse Reports</a>" >> $GITHUB_STEP_SUMMARY
-          ls -la
+          ls -la _ci/perf/lighthouse
 
       - name: 🔦 Run Lighthouse
         id: lighthouse
         uses: treosh/lighthouse-ci-action@v10
         with:
-          configPath: ".lighthouserc.json"
+          configPath: "_ci/perf/lighthouse/.lighthouserc.json"
           urls: |
             https://${{ vars.WWW_DOMAIN }}/
             https://${{ vars.WWW_DOMAIN }}/posts
@@ -63,7 +63,10 @@ jobs:
             https://${{ vars.WWW_DOMAIN }}/privacy
 
       - name: ⚓️ Drop Anchor
-        run: _ci/perf/_utils/landfall.sh ${{ steps.lighthouse.outputs.resultsPath }}
+        run: |
+          _ci/perf/_utils/landfall.sh ${{ steps.lighthouse.outputs.resultsPath }}
+          echo "# Lighthouse Results" >> $GITHUB_STEP_SUMMARY
+          echo ${{ steps.lighthouse.outputs.manifest }} >> $GITHUB_STEP_SUMMARY
 
       - name: ⬆ Upload Reports
         if: always()
