--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -15,6 +15,7 @@
     "axe-core": "^4.7.2",
     "axe-html-reporter": "^2.2.3",
     "lighthouse": "^11.0.0",
-    "lighthouse-plugin-field-performance": "github:dgrebb/lighthouse-plugin-field-performance#develop"
+    "lighthouse-plugin-field-performance": "github:dgrebb/lighthouse-plugin-field-performance#develop",
+    "lighthouse-plugin-social-sharing": "^0.0.1"
   }
 }
