--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -159,8 +159,8 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-  test:
-    name: 🦠 Test ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
+  backstop:
+    name: 🦠 BackstopJS ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
     needs: build_deploy
     uses: ./.github/workflows/test-backstop.yml
     secrets:
@@ -168,3 +168,20 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
+
+  lighthouse:
+    name: 🦠 Lighthouse ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
+    needs: build_deploy
+    uses: ./.github/workflows/test-lighthouse.yml
+    secrets:
+      REPORTS_AWS_S3_BUCKET: ${{ secrets.REPORTS_AWS_S3_BUCKET }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+
+  pagespeed:
+    name: 🦠 PageSpeed Insights ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
+    needs: build_deploy
+    uses: ./.github/workflows/test-psi.yml
+    secrets:
+      PSI_APIKEY: ${{ secrets.PSI_APIKEY }}
