--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -20,23 +20,6 @@ env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
-  # summary:
-  #   name: 📋 Workflow
-  #   runs-on: ubuntu-latest
-
-  #   concurrency:
-  #     group: frontend
-  #     cancel-in-progress: true
-
-  #   outputs:
-  #     RELEASE_NAME: ${{ steps.vars.outputs.RELEASE_NAME }}
-  #     DIST: ${{ steps.vars.outputs.DIST }}
-
-  #   environment:
-  #     name: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
-
-  #   steps:
-
   build_deploy:
     name: 🚜 Build & Deploy to ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
     runs-on: ubuntu-latest
@@ -164,7 +147,7 @@ jobs:
     needs: build_deploy
     uses: ./.github/workflows/test-backstop.yml
     secrets:
-      REPORTS_AWS_S3_BUCKET: ${{ secrets.REPORTS_AWS_S3_BUCKET }}
+      AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -174,7 +157,7 @@ jobs:
     needs: build_deploy
     uses: ./.github/workflows/test-lighthouse.yml
     secrets:
-      REPORTS_AWS_S3_BUCKET: ${{ secrets.REPORTS_AWS_S3_BUCKET }}
+      AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
