--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -151,6 +151,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
+      REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
   lighthouse:
     name: 🦠 Lighthouse ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
@@ -161,6 +162,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
+      REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
   pagespeed:
     name: 🦠 PageSpeed Insights ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
