--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -12,6 +12,8 @@ on:
         required: true
       AWS_REGION:
         required: true
+      REPORTS_DISTRIBUTION:
+        required: true
   workflow_dispatch:
 
 permissions:
@@ -79,6 +81,15 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           SOURCE_DIR: "_ci/backstop/bd/"
           DEST_DIR: "backstop"
+
+      - name: ∅ Invalidate CloudFront
+        uses: chetan/invalidate-cloudfront-action@v2
+        env:
+          DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
+          PATHS: "/*"
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Summary
         if: always()
