--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "build.s": "vite --config vite.config.js build",
     "build.p": "vite --config vite.config.js build",
     "build": "vite --config vite.config.js build",
+    "prettier": "prettier . --check",
     "preview": "vite --config vite.config.js preview",
     "preview.local": "vite --config vite.local.config.js preview",
     "postinstall": "patch-package",
