build(front): removes legacy config property and adds `fix` and `lint` npm scripts

--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,9 @@
     "build.s": "vite --config vite.config.js build",
     "build.p": "vite --config vite.config.js build",
     "build": "vite --config vite.config.js build",
-    "prettier": "prettier . --check",
+    "prettier": "prettier",
+    "lint": "prettier . --check",
+    "fix": "prettier . --write",
     "preview": "vite --config vite.config.js preview",
     "preview.local": "vite --config vite.local.config.js preview",
     "postinstall": "patch-package",
