--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -19,7 +19,6 @@
   "devDependencies": {
     "axe-core": "^4.7.2",
     "axe-html-reporter": "^2.2.3",
-    "lighthouse": "^11.0.0",
-    "psi": "^4.1.0"
+    "lighthouse": "^11.0.0"
   }
 }
