build(ci): adjusts workflow concurrency grouping

--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
 
     concurrency:
-      group: tests
+      group: backstop
       cancel-in-progress: true
 
     environment:
