--- a/.github/workflows/ref-backstop.yml
+++ b/.github/workflows/ref-backstop.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     concurrency:
-      group: tests
-      cancel-in-progress: false
+      group: backstop
+      cancel-in-progress: true
 
     environment:
       name: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
