--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -1,4 +1,4 @@
-name: 🚜 Build, Deploy, and Test 
+name: 🚜 Build & Deploy
 run-name: "${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - ${{ github.event_name == 'pull_request' && format('PR #{0}: {1}', github.event.pull_request.number, github.event.pull_request.title) || format('latest {0}', github.ref_name) }}"
 
 on:
@@ -47,7 +47,6 @@ on:
         required: true
       DISTRIBUTION:
         required: true
-      
 
 permissions:
   checks: write
