--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -102,8 +102,6 @@ jobs:
           repository: dgrebb/dgrebb.com
           ref: ${{ github.ref }}
           token: ${{ github.token }}
-          sparse-checkout: |
-            front
 
       - name: 📐 Set Environment
         env:
@@ -145,12 +143,14 @@ jobs:
           if [ ${{ github.ref_name }} == 'main' ]; then 
             SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} 
             DEPLOY_ENV=$DEPLOY_ENV
+            UPLOAD_SOURCEMAPS=true
             RELEASE_NAME=${{ env.RELEASE_NAME }}
             DIST=${{ env.DIST }}
             npm run build
           else
             SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }} 
             DEPLOY_ENV=$DEPLOY_ENV
+            UPLOAD_SOURCEMAPS=true
             RELEASE_NAME=${{ env.RELEASE_NAME }}
             DIST=${{ env.DIST }}
             npm run build.s
