--- a/.github/workflows/dispatch-bd-fe--cms.yml
+++ b/.github/workflows/dispatch-bd-fe--cms.yml
@@ -22,8 +22,8 @@ jobs:
           issue-title: "Deploying ${{ github.ref_name }} via CMS Dispatch Event"
           issue-body: "Please approve or deny the deployment of version ${{ github.ref_name }}."
           exclude-workflow-initiator-as-approver: false
-          additional-approved-words: "y, a"
-          labels: "zz content-publish"
+          additional-approved-words: y,a
+          labels: 'publish'
 
   frontend:
     runs-on: ubuntu-latest
@@ -32,7 +32,7 @@ jobs:
       - name: 🛰️ Dispatch B&D FE
         run: |
           curl --location 'https://api.github.com/repos/dgrebb/dgrebb.com/actions/workflows/bd-fe.yml/dispatches' \
-          -H 'Content-Type: application/json' \
+          -H 'Content-Type: application/json' \gpf
           -H 'Accept: application/vnd.github+json' \
           -H 'Authorization: Bearer ${{ secrets.DISPATCH_TOKEN }}' \
           --data '{"ref": "${{ github.ref_name }}"}'
