--- a/.github/workflows/dispatch-bd-fe--cms.yml
+++ b/.github/workflows/dispatch-bd-fe--cms.yml
@@ -32,7 +32,7 @@ jobs:
       - name: 🛰️ Dispatch B&D FE
         run: |
           curl --location 'https://api.github.com/repos/dgrebb/dgrebb.com/actions/workflows/bd-fe.yml/dispatches' \
-          -H 'Content-Type: application/json' \gpf
+          -H 'Content-Type: application/json' \
           -H 'Accept: application/vnd.github+json' \
           -H 'Authorization: Bearer ${{ secrets.DISPATCH_TOKEN }}' \
           --data '{"ref": "${{ github.ref_name }}"}'
