--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,8 @@
     "build.p": "vite --config vite.config.js build",
     "build": "vite --config vite.config.js build",
     "prettier": "prettier",
-    "lint": "prettier . --check",
-    "fix": "prettier . --write",
+    "lint": "prettier --plugin prettier-plugin-svelte . --check",
+    "fix": "prettier --plugin prettier-plugin-svelte . --write",
     "preview": "vite --config vite.config.js preview",
     "preview.local": "vite --config vite.local.config.js preview",
     "postinstall": "patch-package",
