--- a/back/package.json
+++ b/back/package.json
@@ -11,13 +11,13 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.13.2",
+    "@strapi/plugin-i18n": "4.13.4",
     "@strapi/plugin-open-ai": "^1.0.1",
-    "@strapi/plugin-sentry": "4.13.2",
+    "@strapi/plugin-sentry": "4.13.4",
     "@strapi/plugin-seo": "^1.9.2",
-    "@strapi/plugin-users-permissions": "4.13.2",
-    "@strapi/provider-upload-aws-s3": "4.13.2",
-    "@strapi/strapi": "4.13.2",
+    "@strapi/plugin-users-permissions": "4.13.4",
+    "@strapi/provider-upload-aws-s3": "4.13.4",
+    "@strapi/strapi": "4.13.4",
     "pg": "^8.10.0",
     "strapi-blurhash": "^1.1.1"
   },
@@ -31,6 +31,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "patch-package": "^7.0.2"
+    "patch-package": "8.0.0"
   }
 }
