--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -1,4 +1,4 @@
-name: 🙈 BackstopJS 
+name: 🙈 BackstopJS
 run-name: "${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - Running BackstopJS ${{ github.event_name == 'pull_request' && format('PR #{0}: {1} on ', github.event.pull_request.number, github.event.pull_request.title) || format('on latest {0}', github.ref_name) }}"
 
 on:
@@ -38,6 +38,10 @@ jobs:
     env:
       DEPLOY_ENV: ${{ github.ref_name == 'main' && 'production' || 'staging' }}
 
+    strategy:
+      matrix:
+        code: [0]
+
     steps:
       - name: 𐂷 Checkout
         uses: actions/checkout@v3
@@ -68,6 +72,13 @@ jobs:
         id: backstop
         continue-on-error: true
         run: cd _ci/backstop && ENV=$DEPLOY_ENV npm run test.gh
+
+      - name: continue-on-error Comment
+        uses: mainmatter/continue-on-error-comment@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          outcome: ${{ steps.backstop.outcome }}
+          test-id: 'BaclstpJS Regression Failed!'
 
       - name: ⬆ Uploading Test Report
         if: always()
