--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -19,6 +19,7 @@ on:
 permissions:
   checks: write
   contents: write
+  pull-requests: write
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
@@ -74,7 +75,7 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           outcome: ${{ steps.backstop.outcome }}
-          test-id: BaclstpJS Regression Failed!
+          test-id: '🙈 BaclstpJS'
 
       - name: ⬆ Uploading Test Report
         if: always()
