--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -51,6 +51,7 @@ on:
 permissions:
   checks: write
   contents: write
+  pull-requests: write
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
