--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -15,6 +15,7 @@ on:
 permissions:
   checks: write
   contents: write
+  pull-requests: write
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
