chore(github): adjust naming/emojis

--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -23,7 +23,7 @@ env:
 jobs:
   
   build_deploy:
-    name: 🚜 Build & Deploy
+    name: 📦 Build & Deploy
     uses: ./.github/workflows/bd-fe.yml
     secrets:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
@@ -49,7 +49,7 @@ jobs:
       DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
 
   backstop:
-    name: 🦠 BackstopJS ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
+    name: 🧐 BackstopJS ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
     needs: build_deploy
     uses: ./.github/workflows/test-backstop.yml
     secrets:
@@ -60,7 +60,7 @@ jobs:
       REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
   lighthouse:
-    name: 🦠 Lighthouse ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
+    name: 🧐 Lighthouse ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
     needs: build_deploy
     uses: ./.github/workflows/test-lighthouse.yml
     secrets:
@@ -71,7 +71,7 @@ jobs:
       REPORTS_DISTRIBUTION: ${{ secrets.REPORTS_DISTRIBUTION }}
 
   pagespeed:
-    name: 🦠 PageSpeed Insights ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
+    name: 🧐 PageSpeed Insights ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}
     needs: build_deploy
     uses: ./.github/workflows/test-psi.yml
     secrets:
