--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -1,4 +1,4 @@
-name: 🚜 Build & Deploy 
+name: 📦 Build & Deploy 
 run-name: "🚜 ${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - Build & Deploy - ${{ github.event_name == 'pull_request' && format('PR #{0}: {1}', github.event.pull_request.number, github.event.pull_request.title) || format('latest {0}', github.ref_name) }}"
 
 on:
