--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -73,7 +73,7 @@ jobs:
         run: cd _ci/backstop && ENV=$DEPLOY_ENV npm run test.gh
 
       - name: continue-on-error Comment
-        uses: mainmatter/continue-on-error-comment@v1
+        uses: dgrebb/continue-on-error-comment@feature/change-signature
         with:
           repo-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           outcome: ${{ steps.backstop.outcome }}
