--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -70,14 +70,17 @@ jobs:
       - name: 👀 Running Visual Regression
         id: backstop
         continue-on-error: true
-        run: cd _ci/backstop && ENV=$DEPLOY_ENV npm run test.gh
+        run: |
+          cd _ci/backstop && ENV=$DEPLOY_ENV npm run test.gh
+          FAIL_TABLE=$(./_utils/parse-report.sh)
+          echo "ERROR_COMMENT_BODY=$FAIL_TABLE" >> $GITHUB_ENV
 
       - name: continue-on-error Comment
         uses: dgrebb/continue-on-error-comment@feature/change-signature
         with:
           repo-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           outcome: ${{ steps.backstop.outcome }}
-          test-id: '🙈 BaclstpJS'
+          test-id: "## 🙈 BaclstpJS\n\n### Failing Tests\n${{ env.ERROR_COMMENT_BODY }}"
 
       - name: ⬆ Uploading Test Report
         if: always()
