--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -80,12 +80,14 @@ jobs:
       - uses: actions/github-script@v6
         if: steps.backstop.outcome != 'success'
         with:
+          github-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: # 🙈 BackstopJS found some visual changes: ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}
+              body: `# 🙈 BackstopJS found some visual changes:
+                ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}`
             })
 
       - name: continue-on-error Comment
@@ -93,7 +95,7 @@ jobs:
         with:
           repo-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           outcome: ${{ steps.backstop.outcome }}
-          test-id: `${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}`
+          test-id: Errors ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}
 
       - name: ⬆ Uploading Test Report
         if: always()
