--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -75,10 +75,13 @@ jobs:
         run: |
           cd _ci/backstop && ENV=$DEPLOY_ENV npm run test.gh
           FAIL_TABLE=$(./_utils/parse-report.sh ${{ vars.REPORTS_DOMAIN }} $REPORT_PATH)
-          echo ERROR_COMMENT_BODY=$FAIL_TABLE >> $GITHUB_OUTPUT
+          echo ERROR_COMMENT_BODY=$FAIL_TABLE >> "$GITHUB_OUTPUT"
+          echo ERROR_COMMENT_BODY=$FAIL_TABLE >> "$GITHUB_ENV"
 
       - uses: actions/github-script@v6
         if: steps.backstop.outcome != 'success'
+        env:
+          BODY: ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}
         with:
           github-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           script: |
@@ -87,7 +90,10 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `# 🙈 BackstopJS found some visual changes:
-                ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}`
+                directly accessed outputs 
+                ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}
+                via env
+                $BODY`
             })
 
       - name: continue-on-error Comment
