--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -78,6 +78,15 @@ jobs:
           echo ERROR_COMMENT_BODY=$FAIL_TABLE >> "$GITHUB_OUTPUT"
           echo ERROR_COMMENT_BODY=$FAIL_TABLE >> "$GITHUB_ENV"
 
+      - name: continue-on-error Comment
+        uses: dgrebb/continue-on-error-comment@feature/change-signature
+        env:
+          BODY: ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}
+        with:
+          repo-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
+          outcome: ${{ steps.backstop.outcome }}
+          test-id: "Errors $BODY"
+
       - uses: actions/github-script@v6
         if: steps.backstop.outcome != 'success'
         env:
@@ -89,21 +98,13 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "# 🙈 BackstopJS found some visual changes:
+              body: |
+                # 🙈 BackstopJS found some visual changes:
                 directly accessed outputs 
                 ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}
                 via env
-                $BODY"
+                process.env.BODY
             })
-
-      - name: continue-on-error Comment
-        uses: dgrebb/continue-on-error-comment@feature/change-signature
-        env:
-          BODY: ${{ steps.backstop.outputs.ERROR_COMMENT_BODY }}
-        with:
-          repo-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
-          outcome: ${{ steps.backstop.outcome }}
-          test-id: "Errors $BODY"
 
       - name: ⬆ Uploading Test Report
         if: always()
