--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -87,11 +87,12 @@ jobs:
         with:
           repo-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           outcome: ${{ steps.backstop.outcome }}
-          test-id: env.COMMENT_BODY
+          test-id: 🤖 ${{ env.COMMENT_BODY }}
 
       - name: 📣 Leave a Comment
         uses: actions/github-script@v6
         if: steps.backstop.outcome != 'success'
+        env: 
         with:
           github-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           script: |
