--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -93,6 +93,7 @@ jobs:
         uses: actions/github-script@v6
         if: steps.backstop.outcome != 'success'
         env: 
+          BODY: ${{ env.COMMENT_BODY }}
         with:
           github-token: ${{ secrets.GH_WORKFLOW_TOKEN }}
           script: |
@@ -100,7 +101,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: env.COMMENT_BODY
+              body: process.env.BODY
             })
 
       - name: ⬆ Uploading Test Report
