--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -89,7 +89,7 @@ jobs:
           outcome: ${{ steps.backstop.outcome }}
           test-id: 🤖 ${{ env.COMMENT_BODY }}
 
-      - name: 📣 Leave a Comment
+      - name: 📣 Comment
         uses: actions/github-script@v6
         if: steps.backstop.outcome != 'success'
         env: 
